WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
107126
Fix vprintf_stderr_common() to compile with -Wshorten-64-to-32
https://bugs.webkit.org/show_bug.cgi?id=107126
Summary
Fix vprintf_stderr_common() to compile with -Wshorten-64-to-32
David Kilzer (:ddkilzer)
Reported
2013-01-17 07:33:42 PST
Created
attachment 183183
[details]
Patch <http://webkit.org/b/000000> Reviewed by NOBODY (OOPS!). Fixes the following build error: Assertions.cpp:92:22: error: implicit conversion loses integer precision: 'CFIndex' (aka 'long') to 'int' [-Werror,-Wshorten-64-to-32] int length = CFStringGetMaximumSizeForEncoding(CFStringGetLength(str), kCFStringEncodingUTF8); ~~~~~~ ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 1 error generated. * wtf/Assertions.cpp: (vprintf_stderr_common): Use CFIndex type instead of int for the return value of CFStringGetMaximumSizeForEncoding(). --- 2 files changed, 19 insertions(+), 1 deletion(-)
Attachments
Patch
(1.88 KB, patch)
2013-01-17 07:33 PST
,
David Kilzer (:ddkilzer)
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2013-01-17 08:38:57 PST
Committed
r139982
: <
http://trac.webkit.org/changeset/139982
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug