Fix vprintf_stderr_common() to compile with -Wshorten-64-to-32 <http://webkit.org/b/107126>

Reviewed by Darin Adler.

Fixes the following build error:

    Assertions.cpp:92:22: error: implicit conversion loses integer precision: 'CFIndex' (aka 'long') to 'int' [-Werror,-Wshorten-64-to-32]
            int length = CFStringGetMaximumSizeForEncoding(CFStringGetLength(str), kCFStringEncodingUTF8);
                ~~~~~~   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    1 error generated.

* wtf/Assertions.cpp:
(vprintf_stderr_common): Use CFIndex type instead of int for the
return value of CFStringGetMaximumSizeForEncoding().

Canonical link: https://commits.webkit.org/125357@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139982 268f45cc-cd09-0410-ab3c-d52691b4dbfc